Added problem questions for the remaining 2 obligatory tasks
There is possibly more hidden somwhere inside the lectures.

--- a/ML2021_set1.ipynb
+++ b/ML2021_set1.ipynb
@@ -14,7 +14,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# KNN algorithm has three steps:\n",
+    "# There are three (obligatory) problems to solve due 6.11\n",
+    "\n",
+    "1.k-NN Problem\n",
+    "\n",
+    "2.Bayes value Problem\n",
+    "\n",
+    "3.Expectation value Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. KNN algorithm has three steps:\n",
     "\n",
     "(1) Calculate Euclidean Distance.\n",
     "\n",
@@ -159,6 +172,69 @@
     "prediction = predict_classification(dataset, dataset[0], 3)\n",
     "print('Expected %d, Got %d.' % (dataset[0][-1], prediction))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Bayes value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A pharmaceutical company developed a test for detecting the rare disease, which is carried by 0.5 % cases of the whole population. Let’s assume that the test gives positive results for 96% of the cases if the patient is ill, but it also gives positive results in 5% of the healthy patient. What is the probability that a patient is ill if his test gave a positive result?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.Expectation value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let g(X) =1 for some set A being a subset of sample space Ω. What is the interpretation of E[g(X)] if X is discrete with a given PMF or continuous with a given PDF?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
