2 out of three problems solved

--- a/ML2021_set1.ipynb
+++ b/ML2021_set1.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "2.Bayes value Problem\n",
     "\n",
-    "3.Expectation value Problem"
+    "3.Expectated value Problem"
    ]
   },
   {
@@ -188,67 +188,106 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.Expectation value"
+    "The natural solution to this problem is (almost the same as ):\n",
+    "    \n",
+    "$$P(\\text{ill}|P)=\\frac{P(P|\\text{ill})\\cdot P(\\text{ill})}{P(ill) \\cdot P(P|ill)+P(-ill) \\cdot P(P|-ill)}.$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let g(X) =1 for some set A being a subset of sample space Ω. What is the interpretation of E[g(X)] if X is discrete with a given PMF or continuous with a given PDF?\n"
+    "$$P(\\text{ill})=0.005$$\n",
+    "\n",
+    "$$P(-\\text{ill})=0.995$$\n",
+    "\n",
+    "$$P(P|\\text{ill})=TP=0.960$$\n",
+    "\n",
+    "$$P(P|\\text{-ill})=FP=0.050$$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the patient is ill on condition that they were positively diagnosed is: 8.799%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calculations\n",
+    "P_ill=0.005\n",
+    "P_not_ill=0.995\n",
+    "P_P_ill=0.960\n",
+    "P_P_not_ill=0.050\n",
+    "\n",
+    "P_ill_P=((P_P_ill*P_ill)/(P_ill*P_P_ill+P_not_ill*P_P_not_ill))\n",
+    "\n",
+    "print(\"The probability that the patient is ill on condition that they were positively diagnosed is: {:.4g}%.\".format(100*P_ill_P))"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 3.Expected Value Problem"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "a).Let $g(X) = 1$ for some set $A$ being a subset of sample space $\\Omega$. What is the interpretation of $E[g(X)]$ if is discrete with a given PMF or continuous with a given PDF?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to solve this problem we have to make an assumption about the values of $g(x)$ for $x\\notin A$. Since the author of this question did not specify what happens for x from within $\\Omega$ but outside of $A$ region we have taken the liberty to specify function $g(x)$ just a tap more\n",
+    "\n",
+    "$$g(x)= \n",
+    "     \\begin{cases}\n",
+    "      &1, x\\in A\\\\\n",
+    "      &0, x\\notin A\n",
+    "     \\end{cases}.$$\n",
+    "     \n",
+    "For continuous $x \\in A$:\n",
+    "$$E\\left[g(X)\\right]=\\int_{\\Omega}g(x)\\cdot f_{x}(x) dx=\\int_{\\Omega} f_{x}(x) dx = 1,$$\n",
+    "\n",
+    "where in accordance to the lecture $f_{x}(x)$ is PDF function.  \n",
+    "\n",
+    "For discrete $k\\in A$ and function $g(x)$ defined in the aforementioned way it is only natural to conclude that:\n",
+    "\n",
+    "$$E\\left[g(X)\\right]=\\int_{\\Omega}g(x)\\cdot f_{x}(x) \\cdot \\delta(x-k) dx=\\sum_{k\\in A}g(k)\\cdot p_{x}(k)=\\sum_{k\\in A}p_{x}(k)=1,$$\n",
+    "\n",
+    "where $p_{x}(k)$ is the PMF function.\n",
+    "\n",
+    "The above equation can be trivially generalised to $n$ dimensions: $$x\\rightarrow (x_{1},x_{2},.....,x_{n}),$$ $$dx\\rightarrow dx_{1}dx_{2}...dx_{n}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b).What is the interpretation of $E\\left[g(X)\\right]$ for $g(X)=x$?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$E\\left[g(X)\\right]=\\int_{\\Omega}g(x)\\cdot f_{x}(x) dx=\\int_{\\Omega}x\\cdot f_{x}(x) dx.$$\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
