--- a/ML2021_set1.ipynb
+++ b/ML2021_set1.ipynb
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The natural solution to this problem is (almost the same as ):\n",
+    "The natural solution to this problem is (almost the same as https://www.youtube.com/watch?v=R13BD8qKeTg):\n",
     "    \n",
     "$$P(\\text{ill}|P)=\\frac{P(P|\\text{ill})\\cdot P(\\text{ill})}{P(ill) \\cdot P(P|ill)+P(-ill) \\cdot P(P|-ill)}.$$"
    ]
@@ -200,18 +200,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$P(\\text{ill})=0.005$$\n",
-    "\n",
-    "$$P(-\\text{ill})=0.995$$\n",
-    "\n",
-    "$$P(P|\\text{ill})=TP=0.960$$\n",
-    "\n",
-    "$$P(P|\\text{-ill})=FP=0.050$$\n"
+    "$$P(\\text{ill})=0.005$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$P(-\\text{ill})=0.995$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$P(P|\\text{ill})=TP=0.960$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$P(P|\\text{-ill})=FP=0.050$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
