Turns out there are some guidelines to KNN at WK github

--- a/ML2021_set1.ipynb
+++ b/ML2021_set1.ipynb
@@ -27,6 +27,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 1. The first problem should be solved according to the guidelines from\n",
+    "\n",
+    "https://github.com/wkrzemien/dataScienceAndML2020/blob/master/notebooks/knn/knn_first.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. KNN algorithm has three steps:\n",
     "\n",
     "(1) Calculate Euclidean Distance.\n",
