--- a/ML_2021_set2.ipynb
+++ b/ML_2021_set2.ipynb
@@ -296,10 +296,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 1: Variation for the list of numbers X1=[1, 1, 1, 1, 1]:   0.0.\n",
+      "Test 2: Variation for the list of numbers X2=[1, 0, 1, 0, 1, 0]:   1.224744871391589.\n"
+     ]
+    }
+   ],
+   "source": [
+    "X1=[1,1,1,1,1]                      #list of numbers test 1 expected result 0\n",
+    "X2=[1,0,1,0,1,0]                    #list of numbers test 2 expected result 1.224...\n",
+    "\n",
+    "def Variation(X):\n",
+    "    XX=np.array(X)                  #array of numbers\n",
+    "    mean=np.mean(XX)                #array of means\n",
+    "    dist=np.dot(XX-mean,XX-mean)    #sum of (x-mu)^2\n",
+    "    var=np.sqrt(dist)               #variation = sqrt(sum of (x-mu^2))\n",
+    "    return var\n",
+    "\n",
+    "print(\"Test 1: Variation for the list of numbers X1={}:   {}.\".format(X1,Variation(X1)))\n",
+    "print(\"Test 2: Variation for the list of numbers X2={}:   {}.\".format(X2,Variation(X2)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -311,10 +333,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Euclidean distance:  1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "X=[0,0,0]\n",
+    "Y=[1,0,0]\n",
+    "\n",
+    "def Euclidean_distance(X,Y):\n",
+    "    xx=np.array(X)\n",
+    "    yy=np.array(Y)\n",
+    "    return np.sqrt(np.sum(np.square(xx-yy)))\n",
+    "print(\"Euclidean distance: \",Euclidean_distance(x,y))"
+   ]
   },
   {
    "cell_type": "markdown",
