--- a/ML_2021_set2.ipynb
+++ b/ML_2021_set2.ipynb
@@ -281,10 +281,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "As expected the mean of X is: 1.5.\n"
+     ]
+    }
+   ],
+   "source": [
+    "X=[1,1,1,2,2,2]                         #expected mean 1.5\n",
+    "\n",
+    "def Mean(X):\n",
+    "    return np.mean(X)\n",
+    "\n",
+    "print(\"As expected the mean of X is: {}.\".format(Mean(X)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -438,10 +453,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Covariance matrix for test 1\n",
+      " [[0.5 1. ]\n",
+      " [1.  2. ]]\n",
+      "Covariance matrix for test 2\n",
+      " [[2.  1. ]\n",
+      " [1.  0.5]]\n",
+      "\n",
+      "test 1\n",
+      "Covariance X1=[1, 0], X1=[1, 0] amounts to: 0.5\n",
+      "Covariance X1=[1, 0], Y1=[1, -1] amounts to: 1.0\n",
+      "Covariance Y1=[1, -1], Y1=[1, -1] amounts to: 2.0\n",
+      "Covariance Y1=[1, -1], X1=[1, 0] amounts to: 1.0\n",
+      "\n",
+      "test 2\n",
+      "Covariance X2=[1, 3], X2=[1, 3] amounts to: 2.0\n",
+      "Covariance X2=[1, 3], Y2=[1, 2] amounts to: 1.0\n",
+      "Covariance Y2=[1, 2], Y2=[1, 2] amounts to: 0.5\n",
+      "Covariance Y2=[1, 2], X2=[1, 3] amounts to: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "X1=[1,0]       \n",
+    "Y1=[1,-1]      #test 1\n",
+    "\n",
+    "X2=[1,3]       \n",
+    "Y2=[1,2]      #test 2\n",
+    "\n",
+    "\n",
+    "print(\"Covariance matrix for test 1\\n\", np.cov(np.array([X1,Y1])))\n",
+    "print(\"Covariance matrix for test 2\\n\", np.cov(np.array([X2,Y2])))\n",
+    "\n",
+    "#I understood that I am supposed to return invariance between two vectors x,y and \n",
+    "#not between all combinations of these vectors.\n",
+    "#If that is what the author of the excercise ment,\n",
+    "# he shall find comfort in the form that the above tests are written.\n",
+    "\n",
+    "def Cov(X,Y):\n",
+    "    XX=np.array(X)                     #array of numbers\n",
+    "    YY=np.array(Y)                     #array of numbers\n",
+    "    meanX=np.mean(XX)                  #array of means X\n",
+    "    meanY=np.mean(YY)                  #array of means Y\n",
+    "    dist=np.dot(XX-meanX,YY-meanY)    #sum of (x-mu)^2\n",
+    "    cov=np.mean(dist)                  #variation = sqrt(sum of (x-mu(X/Y)^2))\n",
+    "    return cov\n",
+    "\n",
+    "print(\"\\ntest 1\")\n",
+    "print(\"Covariance X1={}, X1={} amounts to: {}\".format(X1,X1,Cov(X1,X1)))\n",
+    "print(\"Covariance X1={}, Y1={} amounts to: {}\".format(X1,Y1,Cov(X1,Y1)))\n",
+    "print(\"Covariance Y1={}, Y1={} amounts to: {}\".format(Y1,Y1,Cov(Y1,Y1)))\n",
+    "print(\"Covariance Y1={}, X1={} amounts to: {}\".format(Y1,X1,Cov(Y1,X1)))\n",
+    "\n",
+    "print(\"\\ntest 2\")\n",
+    "print(\"Covariance X2={}, X2={} amounts to: {}\".format(X2,X2,Cov(X2,X2)))\n",
+    "print(\"Covariance X2={}, Y2={} amounts to: {}\".format(X2,Y2,Cov(X2,Y2)))\n",
+    "print(\"Covariance Y2={}, Y2={} amounts to: {}\".format(Y2,Y2,Cov(Y2,Y2)))\n",
+    "print(\"Covariance Y2={}, X2={} amounts to: {}\".format(Y2,X2,Cov(Y2,X2)))\n"
+   ]
   },
   {
    "cell_type": "markdown",
