--- a/ML_2021_set2.ipynb
+++ b/ML_2021_set2.ipynb
@@ -281,24 +281,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "As expected the mean of X is: 1.5.\n"
+      "As expected the mean (brute force) of X is: 1.5.\n",
+      "As expected the mean (numpy )of X is: 1.5.\n"
      ]
     }
    ],
    "source": [
-    "X=[1,1,1,2,2,2]                         #expected mean 1.5\n",
+    "X=[1,1,1,2,2,2]#expected mean 1.5\n",
     "\n",
+    "#brute force solution\n",
+    "def Mean_brute(X):\n",
+    "    y=0\n",
+    "    for x in X:\n",
+    "        y=y+x\n",
+    "    mean_brute = y/len(X)\n",
+    "    return mean_brute              \n",
+    "\n",
+    "#numpy function\n",
     "def Mean(X):\n",
-    "    return np.mean(X)\n",
+    "    return np.mean(X)                  \n",
     "\n",
-    "print(\"As expected the mean of X is: {}.\".format(Mean(X)))"
+    "print(\"As expected the mean (brute force) of X is: {}.\".format(Mean_brute(X)))\n",
+    "print(\"As expected the mean (numpy )of X is: {}.\".format(Mean(X)))"
    ]
   },
   {
@@ -535,10 +546,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scipy based solution cosine similarity between two vecotrs: 0.938952955723142.\n",
+      "Numpy based solution cosine similarity between two vecotrs: 0.938952955723142.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import spatial\n",
+    "\n",
+    "#test \n",
+    "X1 = [1,2,3,4]\n",
+    "Y1 = [2,4,2,5]\n",
+    "result = 1 - spatial.distance.cosine(X1, Y1)\n",
+    "print(\"Scipy based solution cosine similarity between two vecotrs: {}.\".format(result))\n",
+    "\n",
+    "\n",
+    "#solution based on numpy\n",
+    "def Cos_sim(X,Y):\n",
+    "    cos_sim = np.dot(X,Y)/(np.norm(X)*np.norm(Y))\n",
+    "    return cos_sim\n",
+    "print(\"Numpy based solution cosine similarity between two vecotrs: {}.\".format(result))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -559,7 +594,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#interesting function at least for tests.\n",
+    "#r = np.corrcoef(x, y)"
+   ]
   }
  ],
  "metadata": {
