Updated some stuff MK

--- a/ML_2021_set2.ipynb
+++ b/ML_2021_set2.ipynb
@@ -246,30 +246,120 @@
    "metadata": {},
    "source": [
     "### Problem 1.4\n",
+    "(The same problem as last time - STRANGE!)\n",
+    "\n",
+    "I copied my solution from the last time and pasted it here!\n",
+    "\n",
     "Let g(X) =1 for some set A being a subset of sample space Ω: What is E[g(X)] if X is discrete with a given PMF or continuous with a given PDF *"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In order to solve this problem we have to make an assumption about the values of $g(x)$ for $x\\notin A$. Since the author of this question did not specify what happens for x from within $\\Omega$ but outside of $A$ region we have taken the liberty to specify function $g(x)$ in a little bit more detail.\n",
+    "\n",
+    "$$g(x)= \n",
+    "     \\begin{cases}\n",
+    "      &1, x\\in A\\\\\n",
+    "      &0, x\\notin A\n",
+    "     \\end{cases}.$$\n",
+    "     \n",
+    "For continuous $x \\in A$:\n",
+    "$$E\\left[g(X)\\right]=\\int_{\\Omega}g(x)\\cdot f_{x}(x) dx=\\int_{\\Omega} f_{x}(x) dx = 1,$$\n",
+    "\n",
+    "where in accordance to the lecture $f_{x}(x)$ is PDF function.  \n",
+    "\n",
+    "For discrete $k\\in A$ and function $g(x)$ defined in the aforementioned way it is only natural to conclude that:\n",
+    "\n",
+    "$$E\\left[g(X)\\right]=\\int_{\\Omega}g(x)\\cdot f_{x}(x) \\cdot \\delta(x-k) dx=\\sum_{k\\in A}g(k)\\cdot p_{x}(k)=\\sum_{k\\in A}p_{x}(k)=1,$$\n",
+    "\n",
+    "where $p_{x}(k)$ is the PMF function.\n",
+    "\n",
+    "The above equation can be trivially generalised to $n$ dimensions: $$x\\rightarrow (x_{1},x_{2},.....,x_{n}),$$ $$dx\\rightarrow dx_{1}dx_{2}...dx_{n}.$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Problem 1.5\n",
-    "Calculate the mean and the variance of the uniform distribution *"
+    "Calculate the mean and the variance of the uniform distribution *\n",
+    "\n",
+    "I assume $x \\in [a,b]$.\n",
+    "\n",
+    "PDF for uniform distribution\n",
+    "$$\\text{pdf}(x)=\\frac{1}{b-a}$$\n",
+    "\n",
+    "Having calculated pdf(x) for uniform distribution we can procede with calculating mean (first momentum):"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$\\mu=\\frac{\\int_{a}^{b} \\text{pdf}(x)xdx}{\\int_{a}^{b} \\text{pdf}(x)}=\\frac{b^{2}-a^{2}}{2(b-a)}=\\frac{(a+b)}{2}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can calculate variance for this distribution:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\sigma^{2}=\\int_{a}^{b}x^{2}\\text{pdf}(x)dx-\\mu^{2}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The only probelm here is the calculation of the second momentum:\n",
+    "    \n",
+    "$$\\int_{a}^{b}x^{2}\\text{pdf}(x)dx=\\frac{b^{3}-a^{3}}{3(b-a)}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now after subtracting $\\mu^{2}$ we will end up with:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\sigma^{2}=\\frac{b^{3}-a^{3}}{3(b-a)}-\\frac{(a+b)^2}{4}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculations:\n",
+    "\n",
+    "$$\\sigma^{2}=\\frac{4b^{3}-4a^{3}-3b^{3}+3a^{3}+3a^{2}b-3ab^{2}}{12(b-a)}=\\frac{(b-a)^{2}}{12(b-a)}=\\frac{(b-a)^{2}}{12}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\sigma^{2}=\\frac{(b-a)^{2}}{12}.$$"
+   ]
   },
   {
    "cell_type": "markdown",
