variable dependence problem corrected

--- a/ML_2021_set2.ipynb
+++ b/ML_2021_set2.ipynb
@@ -535,7 +535,14 @@
     "Consequently, correlation is indeterminate $\\rho=\\frac{0}{0}$.\n",
     "The question of solving this problem is one of solving this indetermination.\n",
     "\n",
-    "Internet sources that I ve read (i.e. https://stats.stackexchange.com/questions/186745/how-to-find-correlation-between-two-functions) seem to suggest that in such a case we\n"
+    "Internet sources that I ve read (i.e. https://stats.stackexchange.com/questions/186745/how-to-find-correlation-between-two-functions) seem to suggest that in such a case we no correlation $\\rho=0$.\n",
+    "\n",
+    "\n",
+    "X and Y are independent because (constant $X=\\frac{1}{2}$ can be always factored out during integration):\n",
+    "\n",
+    "$$E[(XY)]=E[X]E[Y].$$\n",
+    "\n",
+    "Having established that X,Y are independent we can confirm that in fact $\\rho=0$ in this case. \n"
    ]
   },
   {
