--- a/ML_2021_set2.ipynb
+++ b/ML_2021_set2.ipynb
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -493,23 +493,47 @@
      "output_type": "stream",
      "text": [
       "Test 1: Variation for the list of numbers X1=[1, 1, 1, 1, 1]:   0.0.\n",
-      "Test 2: Variation for the list of numbers X2=[1, 0, 1, 0, 1, 0]:   1.224744871391589.\n"
+      "Test 2: Variation for the list of numbers X2=[1, 0, 1, 0, 1, 0]:   0.25.\n"
      ]
     }
    ],
    "source": [
     "X1=[1,1,1,1,1]                      #list of numbers test 1 expected result 0\n",
-    "X2=[1,0,1,0,1,0]                    #list of numbers test 2 expected result 1.224...\n",
+    "X2=[1,0,1,0,1,0]                    #list of numbers test 2 expected result 0.25.\n",
     "\n",
     "def Variation(X):\n",
     "    XX=np.array(X)                  #array of numbers\n",
     "    mean=np.mean(XX)                #array of means\n",
     "    dist=np.dot(XX-mean,XX-mean)    #sum of (x-mu)^2\n",
-    "    var=np.sqrt(dist)               #variation = sqrt(sum of (x-mu^2))\n",
+    "    var=dist/len(X)                 #variation = sqrt(sum of (x-mu^2))\n",
     "    return var\n",
     "\n",
     "print(\"Test 1: Variation for the list of numbers X1={}:   {}.\".format(X1,Variation(X1)))\n",
     "print(\"Test 2: Variation for the list of numbers X2={}:   {}.\".format(X2,Variation(X2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test 1\n",
+    "XX1=np.array(X1)\n",
+    "print(np.var(XX1,axis=0))     #variation numpy ready\n",
+    "\n",
+    "# test 2\n",
+    "XX2=np.array(X2)\n",
+    "print(np.var(XX2,axis=0))     #variation numpy ready"
    ]
   },
   {
@@ -676,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -693,14 +717,14 @@
       "test 1\n",
       "Covariance X1=[1, 0], X1=[1, 0] amounts to: 0.5\n",
       "Covariance X1=[1, 0], Y1=[1, -1] amounts to: 1.0\n",
-      "Covariance Y1=[1, -1], Y1=[1, -1] amounts to: 2.0\n",
       "Covariance Y1=[1, -1], X1=[1, 0] amounts to: 1.0\n",
+      "Covariance Y1=[1, -1], Y1=[1, -1] amounts to: 2.0\n",
       "\n",
       "test 2\n",
       "Covariance X2=[1, 3], X2=[1, 3] amounts to: 2.0\n",
       "Covariance X2=[1, 3], Y2=[1, 2] amounts to: 1.0\n",
-      "Covariance Y2=[1, 2], Y2=[1, 2] amounts to: 0.5\n",
-      "Covariance Y2=[1, 2], X2=[1, 3] amounts to: 1.0\n"
+      "Covariance Y2=[1, 2], X2=[1, 3] amounts to: 1.0\n",
+      "Covariance Y2=[1, 2], Y2=[1, 2] amounts to: 0.5\n"
      ]
     }
    ],
@@ -725,21 +749,21 @@
     "    YY=np.array(Y)                     #array of numbers\n",
     "    meanX=np.mean(XX)                  #array of means X\n",
     "    meanY=np.mean(YY)                  #array of means Y\n",
-    "    dist=np.dot(XX-meanX,YY-meanY)    #sum of (x-mu)^2\n",
-    "    cov=np.mean(dist)                  #variation = sqrt(sum of (x-mu(X/Y)^2))\n",
+    "    dist=np.sum((XX-meanX)*(YY-meanY)) #sum of (x-mu)^2\n",
+    "    cov=dist/(len(XX)-1)\n",
     "    return cov\n",
     "\n",
     "print(\"\\ntest 1\")\n",
     "print(\"Covariance X1={}, X1={} amounts to: {}\".format(X1,X1,Cov(X1,X1)))\n",
     "print(\"Covariance X1={}, Y1={} amounts to: {}\".format(X1,Y1,Cov(X1,Y1)))\n",
-    "print(\"Covariance Y1={}, Y1={} amounts to: {}\".format(Y1,Y1,Cov(Y1,Y1)))\n",
     "print(\"Covariance Y1={}, X1={} amounts to: {}\".format(Y1,X1,Cov(Y1,X1)))\n",
+    "print(\"Covariance Y1={}, Y1={} amounts to: {}\".format(Y1,Y1,Cov(Y1,Y1)))\n",
     "\n",
     "print(\"\\ntest 2\")\n",
     "print(\"Covariance X2={}, X2={} amounts to: {}\".format(X2,X2,Cov(X2,X2)))\n",
     "print(\"Covariance X2={}, Y2={} amounts to: {}\".format(X2,Y2,Cov(X2,Y2)))\n",
-    "print(\"Covariance Y2={}, Y2={} amounts to: {}\".format(Y2,Y2,Cov(Y2,Y2)))\n",
-    "print(\"Covariance Y2={}, X2={} amounts to: {}\".format(Y2,X2,Cov(Y2,X2)))\n"
+    "print(\"Covariance Y2={}, X2={} amounts to: {}\".format(Y2,X2,Cov(Y2,X2)))\n",
+    "print(\"Covariance Y2={}, Y2={} amounts to: {}\".format(Y2,Y2,Cov(Y2,Y2)))"
    ]
   },
   {
@@ -803,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -830,32 +854,14 @@
       "Pearson correlation coefficients obtained using my function\n",
       "\n",
       "Pearson correlation coefficient (X,X): 1.\n",
-      "Pearson correlation coefficient (X,Y): 0.7586.\n",
-      "Pearson correlation coefficient (Y,X): 0.7586.\n",
+      "Pearson correlation coefficient (X,Y): 0.75864029.\n",
+      "Pearson correlation coefficient (Y,X): 0.75864029.\n",
       "Pearson correlation coefficient (Y,Y): 1.\n",
       "My function yields the same results as sklearn funciton!\n"
      ]
     }
    ],
    "source": [
-    "#Some necessary function, they have been already defined and used in other cells!####\n",
-    "def Cov(X,Y):\n",
-    "    XX=np.array(X)                     #array of numbers\n",
-    "    YY=np.array(Y)                     #array of numbers\n",
-    "    meanX=np.mean(XX)                  #array of means X\n",
-    "    meanY=np.mean(YY)                  #array of means Y\n",
-    "    dist=np.dot(XX-meanX,YY-meanY)    #sum of (x-mu)^2\n",
-    "    cov=np.mean(dist)                  #variation = sqrt(sum of (x-mu(X/Y)^2))\n",
-    "    return cov\n",
-    "\n",
-    "def Variation(X):\n",
-    "    XX=np.array(X)                  #array of numbers\n",
-    "    mean=np.mean(XX)                #array of means\n",
-    "    dist=np.dot(XX-mean,XX-mean)    #sum of (x-mu)^2\n",
-    "    var=np.sqrt(dist)               #variation = sqrt(sum of (x-mu^2))\n",
-    "    return var\n",
-    "#####################################################################################\n",
-    "\n",
     "#test 1\n",
     "X = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
     "Y = [2, 1, 4, 5, 8, 12, 18, 25, 96, 48]\n",
@@ -870,15 +876,15 @@
     "#Pearson's correlation coefficient = covariance(X, Y) / (stdv(X) * stdv(Y))\n",
     "\n",
     "def pearson(X,Y):\n",
-    "    pearson=Cov(X,Y)/(Variation(X)*Variation(Y))\n",
+    "    pearson=Cov(X,Y)/(np.std(np.array(X))*np.std(np.array(Y)))\n",
     "    return pearson\n",
     "    \n",
     "print(\"\\nPearson correlation coefficients obtained using my function\\n\")\n",
     "\n",
-    "print(\"Pearson correlation coefficient ({},{}): {:.4g}.\".format(\"X\",\"X\",pearson(X,X)))\n",
-    "print(\"Pearson correlation coefficient ({},{}): {:.4g}.\".format(\"X\",\"Y\",pearson(X,Y)))\n",
-    "print(\"Pearson correlation coefficient ({},{}): {:.4g}.\".format(\"Y\",\"X\", pearson(Y,X)))\n",
-    "print(\"Pearson correlation coefficient ({},{}): {:.4g}.\".format(\"Y\",\"Y\",pearson(Y,Y)))\n",
+    "print(\"Pearson correlation coefficient ({},{}): {:.8g}.\".format(\"X\",\"X\",pearson(X,X)))\n",
+    "print(\"Pearson correlation coefficient ({},{}): {:.8g}.\".format(\"X\",\"Y\",pearson(X,Y)))\n",
+    "print(\"Pearson correlation coefficient ({},{}): {:.8g}.\".format(\"Y\",\"X\", pearson(Y,X)))\n",
+    "print(\"Pearson correlation coefficient ({},{}): {:.8g}.\".format(\"Y\",\"Y\",pearson(Y,Y)))\n",
     "        \n",
     "print(\"My function yields the same results as sklearn funciton!\")"
    ]
