Only problem 2.1 left to do

--- a/ML_2021_set2.ipynb
+++ b/ML_2021_set2.ipynb
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -529,11 +529,11 @@
    "source": [
     "# test 1\n",
     "XX1=np.array(X1)\n",
-    "print(np.var(XX1,axis=0))     #variation numpy ready\n",
+    "print(np.var(XX1,axis=0))     #variation numpy \n",
     "\n",
     "# test 2\n",
     "XX2=np.array(X2)\n",
-    "print(np.var(XX2,axis=0))     #variation numpy ready"
+    "print(np.var(XX2,axis=0))     #variation numpy "
    ]
   },
   {
@@ -578,16 +578,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Manhattan distance test 1: [[1. 1. 1.]\n",
+      "Manhattan distance test 1:\n",
+      " [[1. 1. 1.]\n",
       " [0. 0. 0.]\n",
       " [0. 0. 0.]].\n",
+      "\n",
       "Manhattan distance (0,0): 1.\n",
       "Manhattan distance (0,1): 1.\n",
       "Manhattan distance (0,2): 1.\n",
@@ -616,7 +618,7 @@
     "#I use 3d space, but we have the freedom to chose any number of dimensions\n",
     "#The only requirement is that we should use the following list format [[],[],[],[]]\n",
     "\n",
-    "print(\"Manhattan distance test 1: {}.\".format(manhattan_distances(X,Y)))\n",
+    "print(\"Manhattan distance test 1:\\n {}.\\n\".format(manhattan_distances(X,Y)))\n",
     "\n",
     "for i in range(len(X)):\n",
     "    for j in range(len(Y)):\n",
@@ -674,10 +676,10 @@
     "Consequently, correlation is indeterminate $\\rho=\\frac{0}{0}$.\n",
     "The question of solving this problem is one of solving this indetermination.\n",
     "\n",
-    "Internet sources that I ve read (i.e. https://stats.stackexchange.com/questions/186745/how-to-find-correlation-between-two-functions) seem to suggest that in such a case we no correlation $\\rho=0$.\n",
+    "Internet sources that I've read (i.e. https://stats.stackexchange.com/questions/186745/how-to-find-correlation-between-two-functions) seem to suggest that in this case we have no correlation $\\rho=0$.\n",
     "\n",
     "\n",
-    "X and Y are independent because (constant $X=\\frac{1}{2}$ can be always factored out during integration):\n",
+    "X and Y are independent because (constant $\\text{pdf}_{X}(x)=\\frac{1}{2}$ can always be factored out during integration):\n",
     "\n",
     "$$E[(XY)]=E[X]E[Y].$$\n",
     "\n",
